[metadata]
name = pycompwa
version = 0.1.3
description = ComPWA: The Common Partial Wave Analysis framework
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/pycompwa/issues
    Changelog = https://github.com/ComPWA/pycompwa/releases
    Documentation = https://compwa.github.io
    Source = https://github.com/ComPWA/pycompwa
license = GPLv3 or later
keywords =
    HEP
    PWA
    amplitude analysis
    partial wave analysis
    particle physics
    particles
    physics
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.6
install_requires =
    matplotlib>=2.2.2
    numpy>=1.14.5
    pandas>=1.0.0
    progress>1.3
    uproot3
    xmltodict>=0.11.0
packages = find:
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
pycompwa =
    particle_list.xml
